<resources>
    <string name="app_name">Quip</string>
    // Strings botones
    <string name="ok">Accept</string>
    <string name="cancel">Cancel</string>
    // Strings dialogo borrar
    <string name="mensaje_confirm_borrar">Are you sure you want to remove this note?</string>
    <string name="etiqueta_dialogo_borrar">Remove: </string>

    // Strings dialogo guardar
    <string name="mensaje_confirm_guardar_lienzo">Are you sure do you want to save this drawing?</string>
    <string name="etiqueta_dialogo_guardar">Save: </string>
    <string name="tituloBorrarPapelera">Remove from paper bin:</string>
    <string name="textoBorrarPapelera">Are you sure do you want to remove this note from paper bin?(If you do, you can not recover it)</string>
    // nota
    <string name="Nota">Note</string>
    <string name="Lista">List</string>
    <string name="titulo">Title</string>
    <string name="hintTituloNota">Note title</string>
    <string name="hintTituloNotaObligatorio">* Note title</string>
    <string name="hintTituloLista">List title</string>
    <string name="hintTituloListaObligatorio">* List title</string>
    <string name="hintRecordar"> What do you want to remember?</string>
    <string name="textoCerrar">Close</string>

    <string name="notaVacia">Note without text</string>
    <string name="listaVacia">List without title</string>

    <!-- MENU DE BOTONES -->
    <string name="anadirNota">New Note</string>
    <string name="anadirNotaLista">New List</string>
    <string name="anadirNotaImagen">Gallery</string>
    <string name="anadirNotaCamara">Camera</string>
    <string name="anadirNotaDibujo">Canvas</string>
    <!-- FIN MENU DE BOTONES -->

    <!-- MENU NOTA LISTA -->
    <string name="borrarItems">Remove list</string>
    <string name="marcarCheckBox">Mark/Unmark checkbox</string>
    <string name="vaciarElementos">Empty list</string>
    <string name="invertirElementos">Invert checkbox</string>
    <string name="menuImprimirLista">Print list in pdf</string>

    <!-- MENU NOTA NORMAL -->

    <string name="menuCamara">Camera</string>
    <string name="menuGaleria">Gallery</string>
    <string name="menuMicrofono">Microphone</string>
    <string name="menuImprimir">Print note in pdf</string>
    <string name="menuDibujar">New drawing</string>

    <!-- MENU QUIP -->
    <string name="configuracionNotas">Configure note options</string>
    <string name="borrarNotasSinTitulo">Remove notes without text</string>
    <string name="borrarListasSinTitulo">Remove lists without title</string>
    <string name="vaciarPapelera">Clear out paper bin</string>


    <!--Dialogo Preferencias Nota -->
    <string name="menuQuipGuardarAutomatico">Automatically save notes</string>
    <string name="menuQuipTituloObligatorio">Required title</string>
    <string name="menuQuipNotaEditable">Enable note editing</string>
    <string name="dialogoPreferenciasNotaTitulo">Note Configuration</string>


    <!-- Dialogo Borrar General-->

    <string name="textoDialogoGeneral">Are you sure do you want to remove?</string>

    <string name="tituloDialogoImagen">Image</string>
    <string name="textoDialogoImagen">that image?</string>

    <string name="tituloDialogoAudio">Audio</string>
    <string name="textoDialogoAudio">that audio?</string>

    <string name="tituloDialogoBorrarDibujo">Drawing</string>
    <string name="textoDialogoBorrarDibujo">that drawing?(A empty drawing will be created)</string>


    <!-- LIENZO -->
    <string name="lienzoLabel">Canvas</string>
    <string name="grosorGrande">Big</string>
    <string name="grosorMediano">Medium</string>
    <string name="grosorPequeno">Small</string>
    <string name="abrirLienzo">Opening publisher: Canvas</string>
    <string name="tituloNuevoDibujo">New Drawing</string>
    <string name="textoDialogoNuevoDibujo">Start a new drawing?(you will lose the current it)</string>
    <string name="seleccionGrosorGrande">You have selected the size: big</string>
    <string name="seleccionGrosorMediano">You have selected the size: medium</string>
    <string name="seleccionGrosorpequeno">You have selected the size: small</string>
    <string name="tituloGuardarDibujo">Save Drawing</string>
    <string name="textoDialogoGuardarDibujo">Do you want to save this drawing in the gallery?</string>
    <string name="dibujoGuardadoCorrectamente">Drawing correctly saved</string>
    <string name="labelDibujo">Drawing</string>

    <!-- PERMISOS -->

    <string name="permisoConcedido">3.1 Permission granted</string>
    <string name="permisoNoConcedido">3.2 Permission ungranted</string>

    <!-- PDF -->
    <string name="notaVaciaPdf">You can not print empty note.</string>
    <string name="listaVaciaPdf">You can not print empty list.</string>
    <string name="imprimirNota">Printing note...</string>
    <string name="imprimirLista">Printing list</string>

    <!-- NAVIGATION DRAWER -->
    <string name="navViewGrupoNotas">Your notes</string>
    <string name="navViewTodasNotas">Notes and Lists</string>
    <string name="navViewNotasNormales">Notes</string>
    <string name="navViewNotasMultimedia">Multimedia notes</string>
    <string name="navViewSoloListas">Lists</string>
    <string name="navViewGrupoUsuario">User</string>
    <string name="navViewDatosUsuario">Personal information</string>
    <string name="navViewDesconectarUsuario">Log off</string>
    <string name="navViewPapelera">Paper bin</string>
    <string name="navMapa">Map</string>

    <!-- Registro Usuario -->


    <string name="textViewWelcome">Welcome to Quip!</string>
    <string name="textViewDameDatos">We deeply hope you enjoy our application, let us know you better :)</string>
    <string name="registroHintNombre">* Firstname</string>
    <string name="registroHintApellidos">Surnames</string>
    <string name="registroHintCiudad">City</string>
    <string name="registroHintCP">Postal Code</string>
    <string name="registroHintFechaNacimiento">Birthdate</string>
    <string name="registroHintCorreo">Mail</string>
    <string name="registroHintTelefono">Phone Number</string>
    <string name="registroTituloEstadoCivil">Civil Status</string>
    <string name="botonRegistro">Send Data</string>
    <string name="errorNoNombre">A name is required</string>

    <string-array name="estadoCivilArray">
        <item>Civil Status</item>
        <item>Single</item>
        <item>Married</item>
        <item>Widower</item>
        <item>De facto partnership</item>
    </string-array>

    <!-- MODIFICAR DATOS USUARIO ,El resto los coge de registro-->

    <string name="datosUsuarioTitulo">Personal Information</string>
    <string name="datosUsuarioBoton">Update Data</string>
    <string name="datosUsuarioActualizados">Your personal information has been updated correctly</string>
    <string name="datosUsuarioLabel">Profile</string>

    <!-- DIALOGO CAMBIAR DE AVATAR -->

    <string name="dialogoCambiarAvatarTitulo">Change Avatar</string>
    <string name="dialogoCambiarAvatarTexto">Do you want to choose a new avatar from gallery?</string>
    <string name="dialogoBorrarAvatar">Delete</string>
    <string name="dialogoNuevoAvatar">Gallery</string>


    <!--Tipo Cursor Quip-->
    <string name="cursorTipoTodo">All</string>
    <string name="cursorTipoSoloNota">Notes</string>
    <string name="cursorTipoSoloNotaMultimedia">Multimedia Notes</string>
    <string name="cursorTipoSoloListas">Lists</string>
    <string name="cursorTipoPapelera">Paper bin</string>

    <!--Dialogo recuperar nota -->
    <string name="dialogoRecuperarTitulo">Recover Note:</string>
    <string name="dialogoRecuperarNotaTexto">Do you want to recover this note from paper bin?</string>

    <!--MARCAS GPS-->
    <string name="marcaSinTexto">Note without text</string>
    <string name="listaSinTexto">List without text</string>

    <string name="menuNotaMapa">See Marks of this note on the map</string>
    <string name="menuListaMapa">See Marks of this list on the map</string>

    <string name="notaSinMarcas">New notes has not marks</string>
    <string name="listaSinMarcas">New lists has not marks</string>

    <!--Audio-->
    <string name="audioGrabando">Recording</string>
    <string name="audioParar">Stop recording</string>

    <!-- Dialogo progreso -->
    <string name="tituloDialogoProgreso">Loading</string>
    <string name="textoDialogoProgreso">wait a moment...</string>

     <!-- otros -->
    <string name="guardarNotaPart1">Your note </string>
    <string name="guardarListaPart1">Your list </string>
    <string name="guardarNotaPart2"> has been saved.</string>
    <string name="errorTituloNoEscrito">You has not written a title</string>
    <string name="editarNota">Opening note to edit.</string>
    <string name="nuevaNota">Creating new note.</string>
    <string name="nuevaNotaImagen">Looking for a image to create a note.</string>
    <string name="editarNotaLista">Opening list to edit.</string>
    <string name="nuevaNotaLista">Creating new list.</string>
    <string name="nuevaNotaDibujo">Opening canvas for a new note.</string>
    <string name="imagenNoGuardada">Image could not be saved</string>
    <string name="appImagen">Select a app for taking a image.</string>


    <string name="empty"></string>
</resources>
