<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item android:title="@string/borrarNotasSinTitulo"
        android:id="@+id/menu_quip_borrar_notas_no_titulo"/>
    <item android:title="@string/borrarListasSinTitulo"
        android:id="@+id/menu_quip_borrar_listas_no_titulo"
        />

    <item android:title="@string/vaciarPapelera"
        android:id="@+id/menu_quip_vaciar_papelera"
        />
    <item android:title="@string/configuracionNotas"
        android:id="@+id/menu_quip_configuracion"/>
   <!-- <group android:checkableBehavior="all">
        <item
            android:id="@+id/menu_quip_guardar"
            android:title="@string/menuQuipGuardarAutomatico"/>
        <item
            android:id="@+id/menu_quip_titulo"
            android:title="@string/menuQuipTituloObligatorio"/>
        <item
            android:id="@+id/menu_quip_editar"
            android:title="@string/menuQuipNotaEditable"/>
    </group> -->
</menu>