<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="20dp"
    android:paddingLeft="25dp"
    android:paddingRight="25dp"
    android:paddingBottom="20dp">


    <TextView
        android:text="@string/textViewWelcome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView2"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="24sp" />

    <TextView
        android:text="@string/textViewDameDatos"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"
        android:id="@+id/textView3"
        android:textAlignment="center"
        android:layout_marginBottom="10dp" />

    <!-- NOMBRE Y APELLIDOS -->

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:id="@+id/registro_til_nombre"
            android:layout_weight="1"
            android:layout_height="match_parent">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="textPersonName"
                android:id="@+id/registro_nombre"
                android:hint="@string/registroHintNombre" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:id="@+id/registro_til_apellidos"
            android:layout_marginLeft="3dp"
            android:layout_weight="1"
            android:layout_height="match_parent">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:id="@+id/registro_apellidos"
                android:imeOptions="actionNext"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:hint="@string/registroHintApellidos" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <!-- CODIGO POSTAL Y CIUDAD -->

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:id="@+id/registro_til_ciudad"
            android:layout_weight="1"
            android:layout_height="match_parent">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:id="@+id/registro_ciudad"
                android:inputType="textPersonName"
                android:imeOptions="actionNext"
                android:layout_height="wrap_content"
                android:hint="@string/registroHintCiudad" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:id="@+id/registro_til_cp"
            android:layout_marginLeft="3dp"
            android:layout_weight="1"
            android:layout_height="match_parent">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:id="@+id/registro_cp"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:layout_height="wrap_content"
                android:hint="@string/registroHintCP" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>



    <!-- EDAD Y ESTADO CIVIL -->

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:id="@+id/registro_til_fecha_nacimiento"
            android:layout_marginLeft="3dp"
            android:layout_weight="1"
            android:layout_height="wrap_content">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:id="@+id/registro_fecha_nacimiento"
                android:imeOptions="actionNext"
                android:inputType="date"
                android:layout_height="wrap_content"
                android:hint="@string/registroHintFechaNacimiento" />

        </android.support.design.widget.TextInputLayout>

        <Spinner
            android:layout_width="match_parent"
            android:layout_marginLeft="3dp"
            android:prompt="@string/registroTituloEstadoCivil"
            android:layout_height="wrap_content"
            android:paddingTop="18dp"
            android:id="@+id/registro_estado_civil"
            android:layout_weight="1" />
    </LinearLayout>

    <!-- TELEFONO Y CORREO -->

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:id="@+id/registro_til_telefono"
            android:layout_weight="1"
            android:layout_height="match_parent">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:id="@+id/registro_telefono"
                android:imeOptions="actionNext"
                android:inputType="phone"
                android:layout_height="wrap_content"
                android:hint="@string/registroHintTelefono" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:id="@+id/registro_til_correo"
            android:layout_marginLeft="3dp"
            android:layout_weight="1"
            android:layout_height="match_parent">

            <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:id="@+id/registro_correo"
                android:imeOptions="actionDone"
                android:inputType="textEmailAddress"
                android:layout_height="wrap_content"
                android:hint="@string/registroHintCorreo" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>

    <Button
        android:text="@string/botonRegistro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/boton_registro"
        android:background="@drawable/boton_registro_selector"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp" />

</LinearLayout>