<?xml version="1.0" encoding="utf-8"?>


<!--BINDING SOLO USADO PARA EL EDITABLE XD -->
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="editable"
            type="boolean" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="20dp"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:paddingTop="7dp">


        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/datos_usuario_titulo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_centerVertical="true"
                android:text="@string/datosUsuarioTitulo"
                android:textAlignment="center"
                android:textSize="24sp"
                android:textStyle="bold" />

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/datos_usuario_foto_perfil"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_alignParentRight="true"
                android:longClickable="@{editable}"
                android:src="@android:drawable/ic_menu_camera"
                android:visibility="visible" />

        </RelativeLayout>


        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!-- NOMBRE Y APELLIDOS -->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/datos_usuario_til_nombre"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/datos_usuario_nombre"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:enabled="@{editable}"
                            android:hint="@string/registroHintNombre"
                            android:imeOptions="actionNext"
                            android:inputType="textPersonName"
                            android:textColor="@android:color/primary_text_light_nodisable" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/datos_usuario_til_apellidos"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="3dp"
                        android:layout_weight="1">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/datos_usuario_apellidos"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:enabled="@{editable}"
                            android:hint="@string/registroHintApellidos"
                            android:imeOptions="actionNext"
                            android:inputType="textPersonName"
                            android:textColor="@android:color/primary_text_light_nodisable" />
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <!-- CODIGO POSTAL Y CIUDAD -->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/datos_usuario_til_ciudad"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/datos_usuario_ciudad"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:enabled="@{editable}"
                            android:hint="@string/registroHintCiudad"
                            android:imeOptions="actionNext"
                            android:inputType="textPersonName"
                            android:textColor="@android:color/primary_text_light_nodisable" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/datos_usuario_til_cp"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="3dp"
                        android:layout_weight="1">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/datos_usuario_cp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:enabled="@{editable}"
                            android:hint="@string/registroHintCP"
                            android:imeOptions="actionNext"
                            android:inputType="number"
                            android:textColor="@android:color/primary_text_light_nodisable" />
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>


                <!-- EDAD Y ESTADO CIVIL -->

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/datos_usuario_til_fecha_nacimiento"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="3dp"
                        android:layout_weight="1">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/datos_usuario_fecha_nacimiento"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:enabled="@{editable}"
                            android:hint="@string/registroHintFechaNacimiento"
                            android:imeOptions="actionNext"
                            android:inputType="date"
                            android:textColor="@android:color/primary_text_light_nodisable" />
                    </android.support.design.widget.TextInputLayout>

                    <Spinner
                        android:id="@+id/datos_usuario_estado_civil"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="3dp"
                        android:layout_weight="1"
                        android:clickable="@{editable}"
                        android:paddingTop="18dp"
                        android:prompt="@string/registroTituloEstadoCivil" />
                </LinearLayout>
                <!-- TELEFONO Y CORREO -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/datos_usuario_til_telefono"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/datos_usuario_telefono"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:enabled="@{editable}"
                            android:hint="@string/registroHintTelefono"
                            android:imeOptions="actionNext"
                            android:inputType="phone"
                            android:textColor="@android:color/primary_text_light_nodisable" />
                    </android.support.design.widget.TextInputLayout>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/datos_usuario_til_correo"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="3dp"
                        android:layout_weight="1">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/datos_usuario_correo"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:enabled="@{editable}"
                            android:hint="@string/registroHintCorreo"
                            android:imeOptions="actionDone"
                            android:inputType="textEmailAddress"
                            android:textColor="@android:color/primary_text_light_nodisable" />
                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>

                <Button
                    android:id="@+id/boton_actualizar_datos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="23dp"
                    android:layout_marginRight="23dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/boton_registro_selector"
                    android:clickable="@{editable}"
                    android:padding="10dp"
                    android:text="@string/datosUsuarioBoton" />
            </LinearLayout>
        </android.support.v4.widget.NestedScrollView>
    </LinearLayout>

</layout>